istio/deploy-failures.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c-prod
spec:
  selector:
    matchLabels:
      app: service-c  
  replicas: 1
  template:
    metadata:
      labels:
        app: service-c
        version: prod
    spec:
      containers:
      - name: service-c
        image: istiodemo/api:fail
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort: 80
      imagePullSecrets:
      - name: regcred
---
