istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-prod
spec:
  selector:
    matchLabels:
      app: service-a  
  replicas: 1
  template:
    metadata:
      labels:
        app: service-a
        version: prod
    spec:
      containers:
      - name: service-a
        image: vinodsanthanam/api:v6
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort: 80
      imagePullSecrets:
      - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-prod
spec:
  selector:
    matchLabels:
      app: service-b  
  replicas: 1
  template:
    metadata:
      labels:
        app: service-b
        version: prod
    spec:
      containers:
      - name: service-b
        image: vinodsanthanam/api:v6
        imagePullPolicy: Never
        ports:
          - containerPort: 80
      imagePullSecrets:
      - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c-prod
spec:
  selector:
    matchLabels:
      app: service-c  
  replicas: 1
  template:
    metadata:
      labels:
        app: service-c
        version: prod
    spec:
      containers:
      - name: service-c
        image: vinodsanthanam/api:v6
        imagePullPolicy: Never
        ports:
          - containerPort: 80
      imagePullSecrets:
      - name: regcred
