istio/fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-c
spec:
  hosts:
  - service-c
  http:
  - fault:
      abort:
        httpStatus: 503
        percent: 50
    match:
    - uri:
        exact: /
    route:
    - destination:
        host: service-c
        subset: prod
---
