istio/routing-with-retries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-c
spec:
  hosts:
  - service-c
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /health
    route:
    - destination:
        host: service-c
        subset: prod
    retries:
      attempts: 3
      perTryTimeout: 1s              
---
