istio/routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a 
spec:
  hosts:
  - "*"
  gateways:
  - api-ingress-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /health
    - uri:
        exact: /health/toggle
    route:
    - destination:
        host: service-a
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b
spec:
  hosts:
  - service-b
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /health
    route:
    - destination:
        host: service-b
        subset: prod
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-c
spec:
  hosts:
  - service-c
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /health
    route:
    - destination:
        host: service-c
        subset: prod
---
